Fixed bug with CodeMirror gutter bar appearing above the collapser drawer.

--- a/Code/style.css
+++ b/Code/style.css
@@ -570,7 +570,7 @@ html, body {
 }
 
 .wcIFrame.wcDrawer {
-  z-index: 3;
+  z-index: 5;
 }
 
 .wcIFrameFloating {
